--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+  margin: 0px;
+  padding: 0px;
+}
+
 :root{
   font-family: "Alice", serif;
   line-height: 150%;
@@ -7,6 +12,14 @@
 body{
   background-image: url(assets/Página\ de\ receita\ \(1\).png);
   background-size: cover;
+}
+
+main{
+  padding: 24px;
+}
+
+section + section{
+  margin-top: 24px;
 }
 
 #page{
@@ -23,14 +36,25 @@ body{
   border-radius: 16px;
 }
 
+#about p + p{
+  margin-top: 12px;
+}
+
 h1{
   line-height: 140%;
   font-size: 40px;
 }
+
 h2{
   font-size: 24px;
 }
 
 h1,h2{
   color:#291B1A ;
+  margin-bottom: 4px;
+  line-height: 150%;
+}
+
+ul{
+  padding-left: 24px;
 }
