--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ section + section{
 #page{
   width: 800px;
   padding: 24px;
-  margin: 48px auto;
+  margin: 48px auto 28px;
   background-color:#F0E8C2 ;
   border-radius: 24px;
   box-sizing: border-box;
@@ -57,4 +57,10 @@ h1,h2{
 
 ul{
   padding-left: 24px;
+}
+
+footer{
+  color: #f0e8c2;
+  text-align: center;
+  margin-bottom: 48px;
 }
